[Cronet] Disable DCHECK(created) in GetCreationTimeFromObject.

- iOS 12 returns nil for system cookie with null creation time.

Bug: 865803, 688540
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I612b4ab55aedb0a2c0d9b2a7cb24418c5a0a6c19
Reviewed-on: https://chromium-review.googlesource.com/1157229
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Misha Efimov <mef@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579763}